<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnEx1"
        android:layout_width="189dp"
        android:layout_height="92dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="387dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="328dp"
        android:onClick="Btnir1"
        android:text="@string/btn_Ex1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEx5"
        android:layout_width="189dp"
        android:layout_height="92dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="542dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="173dp"
        android:onClick="Btnir2"
        android:text="@string/btn_Ex6"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtExFix"
        android:layout_width="360dp"
        android:layout_height="109dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="638dp"
        android:text="@string/txt_Exercicios"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>