<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercicio1">

    <Button
        android:id="@+id/btnvoltar"
        android:layout_width="174dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="624dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="109dp"
        android:onClick="BtnVoltar"
        android:text="@string/bnt_voltar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="604dp"
        android:editable="false"
        android:ems="10"
        android:hint="@string/txt_Num1"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNum2"
        android:layout_width="253dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="461dp"
        android:ems="10"
        android:hint="@string/txt_Num2"
        android:inputType="number"
        android:shadowColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/txtTextoNum1"
        android:layout_width="195dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="660dp"
        android:text="@string/txt_Num1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTextoNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="253dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="522dp"
        android:text="@string/txt_Num2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btncalcula"
        android:layout_width="174dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="525dp"
        android:layout_marginEnd="203dp"
        android:layout_marginBottom="208dp"
        android:text="@string/bnt_calcula"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtresult"
        android:layout_width="284dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="427dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="335dp"
        android:ems="10"
        android:hint="@string/resultado"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtresultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="387dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="388dp"
        android:text="@string/resultado"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>